# polymarket_undervalued_momentum_papertrading

./: .env.example  .gitignore  README.md  pyproject.toml  trading_report.md
src/: clob_client.py  config.py  market_tracker.py  models.py  strategy_engine.py
web/: __init__.py  api.py
web/static/: dashboard.html  dashboard.js
